<?xml version="1.0" encoding="utf-8"?>
<!--Erick Lopez. Creado Automaticamente por IDE -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foreground="@mipmap/fondo"
    tools:context=".Producto">

    <Button
        android:id="@+id/btnCrearProd"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Gris1"
        android:onClick="btnCrearProducto"
        android:text="@string/btnCrear"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/producto" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="360dp"
        android:layout_height="427dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtVwCodigo"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Codigo"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eTxCodigo"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txVwDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Descripcion"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eTxDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txVwPresentacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lcl_presentacion"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checkedButton="@id/rBtnPiezas"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rBtnPiezas"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_rbPiezas"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rBtnGranel"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_rbGranel"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rBtnOtro"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_rbOtro"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txVwCosto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Costo"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eTxCosto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:numeric="decimal"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txVwPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_precio"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eTxPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:numeric="decimal"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txVwMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Marca"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eTxMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txVwCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="btnCancelar"
        android:text="@string/btnCancelar"
        android:textColor="#A80101"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearProd" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/Titulo"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>